# llm-visibility-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: biweekly_batch.yml  supabase_keepalive.yml  visibility-actions.yml  weekly_batch.yml
.streamlit/: config.toml  secrets.toml.example
config/: brands.yaml  models.yaml  seed_prompts.yaml
dashboard/: app.py  auth.py  style.py  utils.py
dashboard/pages/: 1_Overview.py  2_Prompts.py  2_Risposte.py  3_Prompt_Detail.py  3_Prompts.py  4_Citations.py  4_Prompt_Detail.py  5_Citations.py  5_Models.py  6_Models.py  7_Costi_e_Run.py  8_Recommendations.py
docs/: index.html
scripts/: gen_models.py  gh_action.py  run_batch.py  run_batch_with_alerts.py  run_single_prompt.py  seed_db.py  smoke_test_providers.py
src/: alerting.py  analyzer.py  api.py  citation_analyzer.py  cost.py  prompt_generator.py  prompt_service.py  recommender.py  runner.py  storage.py
src/providers/: __init__.py  anthropic_search_provider.py  base.py  factory.py  gemini_search_provider.py  openai_search_provider.py  perplexity_provider.py
tests/: test_analyzer.py  test_citation_analyzer.py  test_prompt_service.py
