[project]
name = "llm-visibility-tracker"
version = "0.1.0"
description = "Monitor talentgarden.com visibility in search-enabled LLM responses"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "google-genai>=0.3.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.39.0",
    "rapidfuzz>=3.10.0",
    "tldextract>=5.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    "streamlit-cookies-manager>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.7.0"]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
